ViewerWidget: Check for a video currently being displayed

... when invoking the context menu to prevent a segfault if currently an
image is displayed.

BUG: 442002